grub-gfxboot (0.97-20) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * switch from dpatch to quilt.
  * import grub-support-256byte-inode.patch by Jesse Keating
    <jkeating@redhat.com> from Fedora and rediff against SuSE's gcc4.patch.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 17:34:27 +0100

grub-gfxboot (0.97-19) unstable; urgency=low

  * update to debhelper compat 6.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:49:28 +0100

grub-gfxboot (0.97-18) unstable; urgency=low

  * update to Standards-Version 3.7.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:51:01 +0100

grub-gfxboot (0.97-17) unstable; urgency=low

  * add VCS control headers.
  * update syntax for Vcs headers in debian/control
  * add patch to fix A20 gate issues, especially in Intel Macs, this replaces
    intelmac.dpatch.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 09 Oct 2007 15:23:19 +0200

grub-gfxboot (0.97-16) unstable; urgency=low

  * fix debian-rules-ignores-make-clean-error.
  * fix manpage-has-useless-whatis-entry.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 17 Aug 2007 18:28:16 +0200

grub-gfxboot (0.97-15) unstable; urgency=low

  * add changes from 0.97-29:
    [ Otavio Salvador ]
    - update-grub: Improve sorting with mixed numeric and non-numeric
      characters. Thanks dann frazier <dannf@debian.org> for the
      patch. Closes: #422759
    [ Robert Millan ]
    - Add myself to Uploaders.
    - update-grub: Remove core.img handling.  It was becoming meaningless
      without presence of the grub-pc package.
    - control (Architecture): Replace any-* arches with the old, boring,
      hardcoded list.  (Closes: #424510)
    - Get rid of grub-disk, mkbimage and grub-floppy.  They're deprecated
      in favour of grub-rescue-pc now.  (Closes: #399168, #250938, #429576,
      #352731)
  * add changes from 0.97-28:
    [ Robert Millan ]